midpoint-live-demo/objects/mp/mp.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mp
    spec:
      volumes:
        - name: mp-home
          emptyDir: {}
        - name: mp-lib
          emptyDir: {}
        - name: mp-secret
          secret:
            secretName: mp-secret
            defaultMode: 420
        - name: pio
          projected:
            sources:
               - configMap:
                   name: users-map
               - configMap:
                   name: pio-map
        - name: login-page
          configMap:
            name: login-page-map
            defaultMode: 0777
        - name: import
          configMap:
            name: hr-map
            defaultMode: 420
        - name: extension-schema
          configMap:
            name: extension-map
            defaultMode: 420
        - name: nfs-volume
          nfs:
            server: nfs-service.mp-demo.svc.cluster.local
            path: /
      containers:
        - name: mp
          image: 'evolveum/midpoint:demo-alpine'
          ports:
            - name: gui
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: mp-secret
              mountPath: /opt/midpoint/config-secrets
            - name: pio
              mountPath: /opt/midpoint-dirs-docker-entrypoint/post-initial-objects
            - name: import
              mountPath: /opt/midpoint-dirs-docker-entrypoint/import
            - name: extension-schema
              mountPath: /opt/midpoint-dirs-docker-entrypoint/schema
            - name: nfs-volume
              mountPath: /opt/midpoint/var/import/
            - name: mp-home
              mountPath: /opt/midpoint/var
            - name: mp-lib
              mountPath: /opt/midpoint/lib
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: mp-service
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
