midpoint-live-demo/objects/mp/mp-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mp-db-service
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: mp-db
  type: ClusterIP
  sessionAffinity: None
