midpoint-live-demo/objects/mp/mp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mp-service
  namespace: mp-demo
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: mp
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
